--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "themes/engimo"]
 	path = themes/engimo
 	url = https://github.com/achary/engimo.git
+[submodule "public"]
+	path = public
+	url = https://github.com/kw-lee/kw-lee.github.io.git
