--- a/config.toml
+++ b/config.toml
@@ -2,151 +2,34 @@ baseURL = "https://kw-lee.github.io"
 title = "KWLee's Blog"
 
 # for smart copyright line, leave this blank and check [params.copyright]
-copyright = ""
+# copyright = ""
 
-theme = "engimo"
+# theme = "engimo"
+theme = "hugo-hello-programmer-theme"
 
 disqusShortname = ""
 googleAnalytics = ""
 
-Paginate = 5
-preserveTaxonomyNames = true
+Paginate = 7
+# preserveTaxonomyNames = true
 
-enableRobotsTXT = true # generate robots.txt
+# enableRobotsTXT = true # generate robots.txt
 
 # Syntax Highlighting ( https://gohugo.io/content-management/syntax-highlighting/ )
 pygmentsCodefences = true
-
 enableEmoji = true
 
 # Missing translations will default to this content language
-defaultContentLanguage = "en"
+DefaultContentLanguage = "en"
 
-[params.info]
-description = "Minimalist Hugo theme for Engineers"
-title404 = "Nothing's here!"
+[author]
+	name = "Kyeogwon Lee"
+	email = "lkw1718@snu.ac.kr"
 
-[params.assets]
+[params]
+	description = "Home"
 
-favicon = "favicon.ico"
-customCSS = ["css/custom.css"]
-customJS = ["js/custom.js"]
-gopher = "" # used in 404 template ( Generator: https://gopherize.me )
-
-[params.copyright]
-prefix = ""
-holder = "Kyeongwon Lee"
-startYear = "2019"
-suffix = ""
-
-[params.settings]
-# date & time format: https://golang.org/pkg/time/
-dateFormat = "2006, Jan 02"
-listDateFormat = "2006, Jan 02"
-archiveDateFormat = "Jan 02"
-hideEntryNavigation = ["page"] # boolean / array of sections
-hideEntryMeta = ["page"] # boolean / array of sections
-showReadingTime = true
-showLastmod = true
-taxonomyCloudShuffle = false
-accentColor = "#44ccff"
-hideMainMenu = false
-rtl = false
-
-[params.sidebar]
-enable = true
-
-[params.widgets]
-header = ["breadcrumbs"]
-homepage = ["recent_posts"]
-sidebar = ["about","search","sidebar_menu","taxonomy_cloud"]
-footer = ["social_menu"]
-
-[params.opengraph.facebook]
-admins = [] # array of Facebook IDs
-appID = ""
-pageID = ""
-
-[params.opengraph.twitter]
-page = "" # Twitter page username
-
-[params.seo]
-# Title Separator: - – — · • * ⋆ | ~ « » < >
-titleSeparator = "•"
-
-[params.social]
-email = "lkw1718@snu.ac.kr"
-github = "kw-lee"
-
-[params.comments]
-enable = false
-
-# Isso: https://posativ.org/isso/
-[params.comments.isso]
-enable = false
-scriptSrc = "" # "https://isso.example.com/js/embed.min.js"
-dataAttrs = "" # "data-isso='https://isso.example.com' data-isso-require-author='true'"
-
-[params.comments.staticman]
-enable = false
-apiEndpoint = "https://api.staticman.net/v2/entry"
-maxDepth = 2
-username = "achary"
-repository = "engimo"
-branch = "master"
-
-# Utterances: https://utteranc.es
-[params.comments.utterances]
-enable = false
-issueTerm = "pathname" # pathname / url / title
-
-[params.comments.utterances.github]
-username = "kw-lee"
-repository = "blog"
-
-[params.search]
-client = "fuse" # algolia / fuse / lunr
-
-[params.search.algolia]
-appId = ""
-indexName = ""
-searchApiKey = ""
-
-[taxonomies]
-author = "authors"
-category = "categories"
-series = "series"
-tag = "tags"
-
-[permalinks]
-page = "/:slug/"
-
-[menu]
-
-	[[menu.main]]
-	name = "About"
-	weight = -30
-	identifier = "about"
-	url = "/about"
-
-	[[menu.main]]
-	name = "Pages"
-	weight = -20
-	identifier = "pages"
-	url = "/pages"
-
-	[[menu.main]]
-	name = "Repo"
-	weight = -10
-	identifier = "repository"
-	url = "https://github.com/kw-lee/blog"
-
-[blackfriday]
-hrefTargetBlank = true
-
-[languages]
-# edit this block for your own language
-[languages.en]
-lang = "en"
-languageName = "English"
-weight = 1
+# favicon = "favicon.ico"
+# customCSS = ["css/custom.css"]
+# customJS = ["js/custom.js"]
+# gopher = "" # used in 404 template ( Generator: https://gopherize.me )
