--- a/config.toml
+++ b/config.toml
@@ -126,7 +126,7 @@ enableEmoji = true
           # title shown in home page (HTML format is supported)
           title = ""
           # subtitle shown in home page
-          subtitle = "Ph.D. Student at Bayesian Statistics Lab."
+          subtitle = "Ph.D. student studying Bayesian statistics"
           # whether to use typeit animation for subtitle
           typeit = true
           # whether to show social links
